# TiTI

./: LICENSE  OM1.py  README.md  meson.build
.github/workflows/: main.yml
examples/: lanza-dm-md-mm-rho09s.fish  lanza-gg1-rho09tr01.fish  lanza-rho098.fish  lanza-rho099.fish  lanza-rhos-lt-099.fish
src/: app_brkdn.h  brkdn_dist.h  comdefs.h  commands.c  defs.h  distrib.c  distributions.h  drand48.h  event.c  fast.c  fddi.c  ftp.h  gg1.c  globals.c  globals.h  init.c  main.c  meson.build  metrics.c  nbsfddi.h  network.c  nntp.h  phone.h  print.c  promedios.c  promedios.h  smtp.h  stats.c  tcpapps.h  tcplib.h  tcplibgen.h  tcplibutils.h  telnet.h  types.h  util.c
